assets/css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Inter',sans-serif;
}/*Global Values*/
:root{
    --primary-color:#272d38;
    --aura-color:#8EADD53D;
    --btn-primary:#8eadd5;
    --btn-hover:#7088a8;
    --white:#fff;
}
html {
    scroll-behavior: smooth;
}
.whiteSpace{
    margin-left: 188px;
    margin-right: 187px;
}
ul {
    list-style: none;
}
a{
    color: var(--primary-color);
}
.mb-120{
    margin-bottom: 120px;
}
/*End Global Values*/
header{
    height: 100vh;
}
nav .aura{
    width: 50vw;
    height: 50vw;
    border-radius: 50%;
    background-color: var(--aura-color);
    left:-35% ;
    filter: blur(100px);
}
/* .aura1{
    width: 50vw;
    height: 50vw;
    border-radius: 50%;
    background-color: red;
    filter: blur(100px);
} */
.navbar-brand{
    color: var(--primary-color);
    font-weight: 700;
}
.nav-link{
    color: var(--primary-color);;
    font-weight: 400;
}
.nav-link:not(:last-child){
    margin-right: 44px;
}
.navbar-toggler:focus{
    box-shadow:none ;
}

/*Hero*/
.hero {
    margin-top: 97px;
    .main-heading{
        color: var(--primary-color);
        max-width: 540px;
    }
    p {
        font-size: 18px;
        max-width: 500px;
        color: var(--primary-color);
    }
}
.hero-img{
    max-width: 450px;
}
.hero-img img{
    max-width: 450px !important;
}
.btn {
    color: var(--white);
    background-color: var(--btn-primary);
    line-height: 27.5px;
    margin-top: 39px;
    width:167px ;
}
.btn:hover{
    color:var(--white);
    background-color:var(--btn-hover) ;
}
.brands{
    margin-top: 157px;
    .brands-container{
        background-color: var(--bg-color);
        height: 100%;
    }
}
.about-info{
    max-width: 435px;
}
#about svg{
    font-size: 20px;
}
.analyze{
    margin-top: 120px;
}
footer{
    width: 100%;
    margin-top: 136px;
    background-color: var(--bg-color);

    h2{
        font-size: 18px;
    }
    .container{
        padding-top: 105px;
    }
    .logo{
        max-width: 205px;
        h2{margin-bottom: 40px;}
        p{font-size: 16px;
        color: var(--primary-color);}
    }
    .trade-mark{
        margin-top: 110px;
    }
}
/*TESTIMONIAL*/
.testimonial-heading{
    max-width: 436px;
    h1,h2{
        color: var(--primary-color);
    }
}
.slider-container {
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    gap: 16px;
    padding: 32px 0;
    scroll-behavior: smooth;
    max-width: 1065px;
}
.testimonial-card {
    flex: 0 0 100%;
    scroll-snap-align: center;
    background-color: #f8f9fa;
    border-radius: 16px;
    padding: 20px;
    text-align: center;
    max-width: 345px;

    h3{
        font-size: 18px;
        color: var(--primary-color);
        padding-bottom: 27px;
    }
}
.testimonial-card img {
    width: 130px;
    height: 130px;
    border-radius: 50%;
    margin-bottom: 10px;
}             
.slider-dots {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    height: 30px;
}
.slider-dots a {
    width: 12px;
    height: 12px;
    border-radius: 50%;
    border: 2px solid var(--btn-primary);
    display: inline-block;
    transition: background-color 0.3s;
    transition: all ease-in-out .3s;
}
.slider-dots a:hover {
    background-color: var(--btn-primary);
    width: 20px;
    height: 20px;
}
.dots-desktop {
    display: flex;
}
.dots-mobile {
    display: none;
}
.slider-container {
    scrollbar-width: none;
}
/*END TESTI.*/
/*Media Query*/
@media screen and (max-width:992px){
.whiteSpace{
    margin-left: 25px;
    margin-right: 25px;
    }
.hero{
    margin-top: 50px;
}
.navbar-brand{
    font-size: 14px;
}
}

@media screen and (max-width:768px) {
    /* .whiteSpace{
        margin-left: 25px;
        margin-right: 25px;
    } */
    .hero{
        flex-grow: 0;
        align-items: flex-start !important;
    }
    .navbar-brand{
        font-size: 14px !important;
    }
    .navbar-toggler{
        width: 24px;
        height: 24px;
    }
    .hero-info{
        text-align: center;
    }
    .hero-img{
        min-width:250px;
    }
    .hero-img img{
        width: 100%;
    }
    .brands-container{
        padding: 24px 16px !important;
        min-width: 250px !important;
        flex-wrap: nowrap;
        img{
            padding-inline: 10px;
            max-width:70px ;
    }
    img:last-child{
        width: 50px;
    }
    }
    .about {
        flex-direction: column-reverse;

    }
    #about svg{
            transform: rotate(90deg);
    }
    .contact img{
        display: none;
    }
    .testimonial-heading{
    h1{
        font-size: 12px !important;
    }
    h2{
        font-size: 32px;
    }
}
    .dots-desktop {
    display: none;}
        
    .dots-mobile {
    display: flex;
    }
    footer .row{
        flex-direction: column;
        text-align: center;
        .info-div{
            margin-bottom: 72px;
        }
        .logo{
        max-width: 205px;
        margin: 0 auto;
        margin-bottom: 72px;}
    }
    footer .trade-mark{
        margin-top: 0;
    }   
}

